<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView android:id="@+id/tvCartHeader" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_cart"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/green"
        android:paddingTop="@dimen/common_padding"
        android:paddingBottom="@dimen/common_padding"
        android:textSize="@dimen/header_text_size"/>
    
    <ListView android:id="@+id/lvCartItems"
        android:layout_below="@id/tvCartHeader"
        android:layout_above="@+id/llTotal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    
    <LinearLayout android:id="@+id/llTotal"
        android:layout_above="@+id/llBottom" 
        android:layout_width="match_parent"
        android:paddingTop="@dimen/common_padding"
        android:paddingBottom="@dimen/common_padding"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:textStyle="bold"
            android:gravity="center_vertical|end"
            android:text="@string/total_price"/>
       <TextView android:id="@+id/tvTotalPrice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:textStyle="bold"
            android:text=""/>
    </LinearLayout>
    <LinearLayout android:id="@id/llBottom"
        android:layout_alignParentBottom="true" 
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <Button android:id="@+id/bClear"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:background="@color/orange"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/clear_cart"/>
        <Button android:id="@+id/bShop"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:background="@color/orange"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/shop"/>
    </LinearLayout>
    
</RelativeLayout>